[DANIL] last commit

--- a/src/app/_dialog/dialog-auth/dialog-auth.component.html
+++ b/src/app/_dialog/dialog-auth/dialog-auth.component.html
@@ -6,7 +6,7 @@
 
   <div class="text-center js-deleteParent" *ngIf="userNotFound">
     <div class="alert alert-error">
-      <p>Error: Email or password is incorrect</p>
+      <p>{{ 'errors.AuthError' | translate }}</p>
     </div>
   </div>
 
