--- a/src/app/_exchange/step3-6/step3-6.component.html
+++ b/src/app/_exchange/step3-6/step3-6.component.html
@@ -2,7 +2,7 @@
   <div class="step-title"><h3 class="h3">2. Account is verified!</h3></div>
 
   <p class="p_small">
-    Congratulations! <b>You will be able to continue</b> the exchange of the specified amount <b>after moderation</b> of all documents.
+    Awaiting account moderation.
   </p>
 
   <form action="#" class="form">
