--- a/src/styles.sass
+++ b/src/styles.sass
@@ -45,9 +45,8 @@
   .btn:not(.dropbtn.btn)
     min-width: 14rem
 
-.popup
-  .btn
-    min-width: 14rem
+.mat-dialog-container .popup .btn
+  min-width: 14rem
 
 
 
@@ -139,6 +138,7 @@ main
   line-height: 24px
   p
     text-align: left
+    font-family: sans-serif
   br
     display: none
 
