--- a/src/app/_exchange/step3-4/step3-4.component.html
+++ b/src/app/_exchange/step3-4/step3-4.component.html
@@ -1,6 +1,6 @@
 <div class="step">
   <div class="step-title" *ngIf="!userModel.verification_image"><h3 class="h3">2. Phone verified!</h3></div>
-  <div class="step-title" *ngIf="userModel.verification_image"><h3 class="h3">2. ID Card waiting moderation!</h3></div>
+  <div class="step-title" *ngIf="userModel.verification_image"><h3 class="h3">2. Awaiting ID moderation</h3></div>
 
   <p class="p_small" *ngIf="!userModel.verification_image">
     Congratulations! Your phone number was <br>
