--- a/src/app/_exchange/step3/step3.component.html
+++ b/src/app/_exchange/step3/step3.component.html
@@ -7,30 +7,45 @@
 
   <form action="#" class="form" [ngClass]="{'custom-loader disabled': loading}"  [formGroup]="userAuthForm" (submit)="submit($event)"  #authForm="ngForm" novalidate>
     <label class="form-group"
-           [ngClass]="{'has-error': (userAuthForm.controls['email'].hasError('email')
-           || userAuthForm.controls['email'].hasError('maxlength')
-           || userNotFound)
+           [ngClass]="{'has-error': (userAuthForm.controls['email'].hasError('required')
+           || userAuthForm.controls['email'].hasError('email')
+           || userAuthForm.controls['email'].hasError('maxlength'))
            && authForm.submitted}">
       <span class="form-title">Your e-mail (account login):</span>
       <input [(ngModel)]="userAuth.email" formControlName="email" name="email" type="text" class="form-control">
+
       <span
-        *ngIf="(userAuthForm.controls['email'].hasError('email')
-        || userAuthForm.controls['email'].hasError('maxlength'))
-        && authForm.submitted" class="error-label">{{ 'errors.EmailError' | translate }}</span>
+        *ngIf="userAuthForm.controls['email'].hasError('required')
+        && authForm.submitted" class="error-label">Required field</span>
+
       <span
-        *ngIf="userNotFound && authForm.submitted" class="error-label">{{ 'errors.Email' | translate }}</span>
+        *ngIf="userAuthForm.controls['email'].hasError('email')
+        && !userAuthForm.controls['email'].hasError('required')
+        && !userAuthForm.controls['email'].hasError('maxlength')
+        && authForm.submitted" class="error-label">Incorrect email</span>
+
+      <span
+        *ngIf="userAuthForm.controls['email'].hasError('maxlength') && !authForm.controls['email'].hasError('required')
+        && authForm.submitted" class="error-label">The maximum number of characters 64</span>
+
     </label>
 
     <label class="form-group" [ngClass]="{'has-error': (userAuthForm.controls['password'].hasError('required')
-           || userAuthForm.controls['password'].hasError('maxlength'))
+           || userAuthForm.controls['password'].hasError('maxlength')
+           || userNotFound)
            && authForm.submitted}">
       <span class="form-title">Password:</span>
-      <input [(ngModel)]="userAuth.password" formControlName="password" name="password" type="password" class="form-control"
+      <input [(ngModel)]="userAuth.password" (keydown)="inputPassChanged()" formControlName="password" name="password" type="password" class="form-control"
              required="">
       <span
         *ngIf="(userAuthForm.controls['password'].hasError('required')
         || userAuthForm.controls['password'].hasError('maxlength'))
         && authForm.submitted" class="error-label">{{ 'errors.PasswordError' | translate }}</span>
+      <span
+        *ngIf="userNotFound
+        && !userAuthForm.controls['password'].hasError('required')
+        && !userAuthForm.controls['password'].hasError('maxlength')
+        && authForm.submitted" class="error-label">{{ 'errors.AuthError' | translate }}</span>
     </label>
 
     <div class="forgot">
