[DANIL] last commit

--- a/src/app/_dialog/dialog-auth/dialog-auth.component.html
+++ b/src/app/_dialog/dialog-auth/dialog-auth.component.html
@@ -39,7 +39,7 @@
 
     <div class="forgot">
       <div class="text-center tip-link">
-        <a href="#" (click)="openForgotPopup($event)" class="link">Forgot password?</a>
+        <a href="#" (click)="openForgotPopup($event)" class="link sans-serif tt-uppercase">Forgot password?</a>
       </div>
     </div>
 
