--- a/src/app/_exchange/step1-1/step1-1.component.html
+++ b/src/app/_exchange/step1-1/step1-1.component.html
@@ -10,7 +10,7 @@
     <a href="#" class="btn btn-accentSecond rippler rippler-default full-width" (click)="goToRegistr($event)">Create free account</a>
 
     <div class="text-center tip-link">
-      <a href="#" (click)="goToNext($event)" class="link tt-uppercase">continue without account</a>
+      <a href="#" (click)="goToNext($event)" class="link tt-uppercase pt-sans">continue without account</a>
     </div>
 
     <div class="text-center">
