--- a/src/app/_exchange/step3-6/step3-6.component.html
+++ b/src/app/_exchange/step3-6/step3-6.component.html
@@ -1,5 +1,5 @@
 <div class="step">
-  <div class="step-title"><h3 class="h3">2. Account is verified!</h3></div>
+  <div class="step-title"><h3 class="h3">2. Awaiting account moderation</h3></div>
 
   <p class="p_small">
     Awaiting account moderation.
