--- a/src/app/_exchange/step4/step4.component.html
+++ b/src/app/_exchange/step4/step4.component.html
@@ -2,7 +2,7 @@
   <div class="step-title"><h3 class="h3">3. Personal info and wallet</h3></div>
 
   <div class="text-center tip-link">
-    <a href="#" class="link tt-uppercase" (click)="fillLastData($event)">Fill from last</a>
+    <a href="#" class="link tt-uppercase sans-serif" (click)="fillLastData($event)">Fill from last</a>
   </div>
 
   <form class="form" [ngClass]="{'custom-loader disabled': loading}" (submit)="submit($event)" [formGroup]="step4Form"  #form4="ngForm" novalidate>
