--- a/src/app/discount/discount.component.html
+++ b/src/app/discount/discount.component.html
@@ -5,9 +5,7 @@
       <div class="title"><h1 class="h1">Discount Program</h1></div>
 
       <div class="sub-title">
-        <p class="p_large pre-line">
-          {{ 'discount-program.sub-head' | translate }}
-        </p>
+        <p class="p_large pre-line">{{ 'discount-program.sub-head' | translate }}</p>
       </div>
 
     </header>
@@ -68,9 +66,76 @@
 
 
                 <div class="level">
-                  <div class="level__img">
-                    <img src="../assets/img//discount_level.png" alt="">
+
+                  <div class="discount-program">
+                    <div class="stairs">
+                      <div class="item level-1">
+                        <div class="item-name">Limit 0 USD</div>
+                        <div class="item-title">
+                          <strong>0%</strong>
+                          <span>discount</span>
+                        </div>
+                        <div class="item-level">
+                          <div class="item-level__icons">
+                            <img src="../assets/img/you-icon.png" alt="">
+                          </div>
+                          <div class="item-level__graph"></div>
+                          <div class="item-level__name">Level 0</div>
+                        </div>
+                      </div>
+
+                      <div class="item level-2">
+                        <div class="item-name">Limit 10 USD</div>
+                        <div class="item-title">
+                          <strong>3%</strong>
+                          <span>discount</span>
+                        </div>
+                        <div class="item-level">
+                          <div class="item-level__graph"></div>
+                          <div class="item-level__name">Level 1</div>
+                        </div>
+                      </div>
+
+                      <div class="item level-3">
+                        <div class="item-name desktop-only">Limit 1 000 USD</div>
+                        <div class="item-name mobile-only">Limit 1k USD</div>
+                        <div class="item-title">
+                          <strong>5%</strong>
+                          <span>discount</span>
+                        </div>
+                        <div class="item-level">
+                          <div class="item-level__graph"></div>
+                          <div class="item-level__name">Level 2</div>
+                        </div>
+                      </div>
+
+                      <div class="item level-4">
+                        <div class="item-name desktop-only">Limit 10 000 USD</div>
+                        <div class="item-name mobile-only">Limit 10k USD</div>
+                        <div class="item-title">
+                          <strong>7%</strong>
+                          <span>discount</span>
+                        </div>
+                        <div class="item-level">
+                          <div class="item-level__graph"></div>
+                          <div class="item-level__name">Level 3</div>
+                        </div>
+                      </div>
+
+                      <div class="item level-5">
+                        <div class="item-name">Limit 10M USD</div>
+                        <div class="item-title">
+                          <strong>15%</strong>
+                          <span>discount</span>
+                        </div>
+                        <div class="item-level">
+                          <div class="item-level__graph"></div>
+                          <div class="item-level__name">Level 4</div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
+
                   <div class="level__info">
                     <div class="info__title title-inner"> {{ 'discount-program.total' | translate }}</div>
                     <div class="info__value">
