--- a/src/app/_dialog/dialog-success/dialog-success.component.html
+++ b/src/app/_dialog/dialog-success/dialog-success.component.html
@@ -3,7 +3,7 @@
     <h2 class="h2 text-center">{{ data.title  }}</h2>
   </div>
   <div class="popup-subtitle">
-    <p class="p_middle mobile-small">{{data.subtitle}}</p>
+    <p class="p_middle mobile-small" [innerHTML]="data.subtitle"></p>
   </div>
 
   <div class="popup-content">
@@ -12,3 +12,4 @@
     </div>
   </div>
 </div>
+
