--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -134,7 +134,7 @@
                         </div>
                         <div class="form-group small-indent">
                           <div class="text-center tip-link">
-                            <a href="#" class="link tt-uppercase" (click)="display_phone_form($event)">Change phone</a>
+                            <a href="#" class="link tt-uppercase pt-sans" (click)="display_phone_form($event)">Change phone</a>
                             <div class="timer"></div>
                           </div>
                         </div>
@@ -146,7 +146,7 @@
                             <span class="verified">
                               <span class="verified-success">
                                   Congratulations! Your phone number was <br>
-                                  verified. Let’s <b>continue</b> and <b>upload</b> your <b>identity card</b>.
+                                  verified.
                               </span>
                             </span>
                           </span>
