--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -1576,24 +1576,25 @@ hr
 	input
 		padding-right: 10.5rem
 	.btn
-		position: absolute
-		top: 0
-		right: 0
-		width: 9.5rem
-		min-width: auto
-		height: 100%
-		display: -webkit-flex
-		display: -moz-flex
-		display: -ms-flex
-		display: -o-flex
-		display: flex
-		align-items: center
-		justify-content: center
-		font-size: 1.6rem
-		line-height: 2.2rem
-		margin: 0
-		padding: 0
-		z-index: 5
+    position: absolute
+    top: 0
+    right: 0
+    width: 9.5rem
+    min-width: auto
+    height: 100%
+    display: -webkit-flex
+    display: -moz-flex
+    display: -ms-flex
+    display: -o-flex
+    display: flex
+    align-items: center
+    justify-content: center
+    font-size: 1.6rem
+    border-radius: 0 4px 4px 0
+    line-height: 2.2rem
+    margin: 0
+    padding: 0
+    z-index: 5
 
 .upload-file
 	display: -webkit-flex
@@ -1619,23 +1620,24 @@ hr
 		text-overflow: ellipsis
 		white-space: nowrap
 	.btn
-		position: absolute
-		top: 0
-		right: -2px
-		min-width: auto
-		height: 100%
-		display: -webkit-flex
-		display: -moz-flex
-		display: -ms-flex
-		display: -o-flex
-		display: flex
-		align-items: center
-		justify-content: center
-		font-size: 1.6rem
-		line-height: 2.2rem
-		margin: 0
-		padding: 0 1.7rem
-		z-index: 5
+    position: absolute
+    top: 0
+    right: -2px
+    min-width: auto
+    height: 100%
+    display: -webkit-flex
+    display: -moz-flex
+    display: -ms-flex
+    display: -o-flex
+    display: flex
+    align-items: center
+    justify-content: center
+    font-size: 1.6rem
+    line-height: 2.2rem
+    margin: 0
+    padding: 0 1.7rem
+    z-index: 5
+    border-radius: 0 4px 4px 0
 
 .upload-file__name.rtl
   padding-right: 12.5rem
