--- a/src/app/_exchange/step3-6/step3-6.component.html
+++ b/src/app/_exchange/step3-6/step3-6.component.html
@@ -1,9 +1,7 @@
 <div class="step">
   <div class="step-title"><h3 class="h3">2. Awaiting account moderation</h3></div>
 
-  <p class="p_small">
-    Awaiting account moderation.
-  </p>
+  <p class="p_small" [innerHTML]="'exchange.exchangeSuccess' | translate"></p>
 
   <form action="#" class="form">
     <div class="form-btn between-children">
