--- a/src/app/_dialog/dialog-success/dialog-success.component.html
+++ b/src/app/_dialog/dialog-success/dialog-success.component.html
@@ -8,7 +8,7 @@
 
   <div class="popup-content">
     <div class="btn-wrapper text-center">
-      <a href="#" class="btn btn-accent rippler rippler-default" (click)="onNoClick($event)">Thanks!</a>
+      <a href="#" class="btn btn-accent rippler rippler-default" (click)="onNoClick($event)">Ok!</a>
     </div>
   </div>
 </div>
