--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -8,12 +8,13 @@
               <li><a routerLink="/testimonials" routerLinkActive="active">{{ 'header.testimonials' | translate }}</a></li>
               <li><a routerLink="/contacts" routerLinkActive="active">{{ 'header.contacts' | translate }}</a></li>
               <li class="dropdown dropdown-up">
-                <a href="#" class="dropdown-link js-dropdown-link">{{ 'header.dropdown-link' | translate }}</a>
+                <!--<a href="#" class="dropdown-link js-dropdown-link">{{ 'header.dropdown-link' | translate }}</a>-->
+                <a href="#" [ngClass]="{'active': router.isActive('/more', null)}" class="dropdown-link js-dropdown-link link-more">{{ 'header.dropdown-link' | translate }}</a>
                 <ul class="dropdown-data">
                   <li><a href="#">{{ 'header.dropdown-data1' | translate }}</a></li>
                   <li><a href="#">{{ 'header.dropdown-data2' | translate }}</a></li>
                   <li><a href="#">{{ 'header.dropdown-data3' | translate }}</a></li>
-                  <li><a routerLink="/feesdiscount" >{{ 'header.feesdiscount' | translate }}</a></li>
+                  <li><a routerLink="/more/feesdiscount" >{{ 'header.feesdiscount' | translate }}</a></li>
 
 
                   <!--<li><a routerLink="/faq">{{ 'header.faq' | translate }}</a></li>-->
