--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,8 +27,7 @@
                 <label class="input-exchange"
                        [ngClass]="{'has-error':
                                       exchangeFromForm.controls['inputFrom'].hasError('maxlength')
-                                      || exchangeFromForm.controls['inputFrom'].hasError('minCountLimit')
-                                      || exchangeFromForm.controls['inputFrom'].hasError('maxCountLimit')}">
+                                      || exchangeFromForm.controls['inputFrom'].hasError('minCountLimit')}">
 
                   <div class="input">
                     <input type="text" [(ngModel)]="inputExchangeFrom" (keydown)='inputExchangeChanged($event)'
@@ -40,11 +39,6 @@
                         *ngIf="(exchangeFromForm.controls['inputFrom'].hasError('email')
                                || exchangeFromForm.controls['inputFrom'].hasError('maxlength'))
                                && fromForm.submitted">{{ 'errors.ExchangeLimit' | translate }}</span>
-
-                  <span class="error-label" *ngIf="exchangeFromForm.controls['inputFrom'].hasError('maxCountLimit')">
-                      {{ 'errors.ExchangeAmount' | translate }}
-                      <a routerLink="/contacts"> {{ 'exchange.InputErrorLink' | translate }}</a>
-                    </span>
 
                   <span class="error-label" *ngIf="exchangeFromForm.controls['inputFrom'].hasError('minCountLimit')">
                       {{ 'errors.minCountLimit' | translate }}
@@ -376,8 +370,9 @@
                 <label class="input-exchange"
                        [ngClass]="{'has-error':
                                       (exchangeToForm.controls['inputTo'].hasError('maxlength') ||
+
                                       (exchangeToForm.controls['inputTo'].hasError('maxbalance')
-                                      && !exchangeFromForm.controls['inputFrom'].hasError('maxCountLimit')) ),
+                                      || exchangeFromForm.controls['inputFrom'].hasError('maxCountLimit')) ),
                                      'has-warn':
                                       exchangeToForm.controls['inputTo'].hasError('email')}">
                   <div class="input">
@@ -388,9 +383,15 @@
                     <span class="currency">{{selectedExchangeTo?.currency || ''}}</span>
                   </div>
 
-                  <span class="error-label"
-                        *ngIf="(exchangeToForm.controls['inputTo'].hasError('maxbalance')
-                                && !exchangeFromForm.controls['inputFrom'].hasError('maxCountLimit'))">{{ 'errors.ExchangeLimit' | translate:selectedExchangeTo }}</span>
+
+
+                  <span class="error-label" *ngIf="exchangeFromForm.controls['inputFrom'].hasError('maxCountLimit')
+                      || exchangeToForm.controls['inputTo'].hasError('maxbalance')">
+                      {{ 'errors.ExchangeAmount' | translate }}
+                      <a routerLink="/contacts">Contuct us</a>
+                  </span>
+
+
                 </label>
               </form>
             </div>
